# far-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: configs.py  constants.py  training.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: batch_jobs.py  git.py  logging.py  utils.py
{{cookiecutter.project_slug}}/tests/: test_training.py
