[project]
name = "python-lib-template"
version = "0.0.1"
description = "A template for creating Python libraries at FAR.AI"
readme = "README.md"
authors = [
    {name = "James Collins", email = "james@far.ai"},
]
requires-python = ">=3.12"

[project.urls]
repository = "https://github.com/AlignmentResearch/python-lib-template"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "cookiecutter",
    "pyyaml",
]
